clusters/k3s-cluster/tdarr/tdarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tdarr
  labels:
    name: tdarr
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: server
      port: 8266
      targetPort: 8266
---
# Ingress - External
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: tdarr
spec:
  rules:
    - host: tdarr.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
---
# Ingress - Local
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-local
  namespace: tdarr
spec:
  rules:
    - host: tdarr.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: tdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 8265
            - containerPort: 8266
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "4"
              memory: "4Gi"
              amd.com/gpu: 1
          volumeMounts:
            - mountPath: /app/server
              name: config
              subPath: server
            - mountPath: /app/configs
              name: config
              subPath: configs
            - mountPath: /app/logs
              name: config
              subPath: logs
            - mountPath: /media/movies
              name: movies
            - mountPath: /media/tv
              name: tv
            - mountPath: /temp
              name: cache
            - mountPath: /dev/dri
              name: dri
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: tdarr-movies-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: tdarr-tv-pvc
        - name: cache
          persistentVolumeClaim:
            claimName: tdarr-cache-pvc
        - name: dri
          hostPath:
            path: /dev/dri
